# tasks-watcher

./: .gitignore  Cargo.toml  README.md
debian/: tasks-watcher.service
src/: config.rs  main.rs  obsidian_handler.rs  task.rs
src/sources/: github.rs  jira.rs  mod.rs
