[package]
name = "task-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Gianoberto Giampieri giano.giampieri@proton.me"]
licence = "MIT"
description = "A simple task watcher for GitHub and Jira tasks"
readme = "README.md"
repository = "https://github.com/goldegard/task-watcher"
categories = ["development-tools", "utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
digest = "0.10.7"
dotenv = { version = "0.15.0", features = ["cli"] }
octocrab = "0.38.0"
reqwest = "0.12.4"
serde = "1.0.198"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt", "full"] }
